corrected overflow

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
     background: #1B1924;
     width: 390px;
     height: 844px;
